--- a/package.json
+++ b/package.json
@@ -9,10 +9,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "react-dom": "^18.2.0",
     "react": "^18.2.0",
-    "@google/genai": "^0.11.0",
-    "rxjs": "^7.8.1"
+    "react-dom": "^18.2.0",
+    "@google/genai": "^1.28.0"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
